--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/clean-webpack-plugin": "^0.1.2",
     "@types/copy-webpack-plugin": "^4.4.1",
     "@types/html-webpack-plugin": "^2.30.3",
+    "@types/json-schema": "^6.0.1",
     "@types/node": "^9.6.1",
     "@types/react": "^16.1.0",
     "@types/react-dom": "^16.0.4",
