--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
   "dependencies": {},
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.2",
-    "@types/copy-webpack-plugin": "^4.4.1",
-    "@types/html-webpack-plugin": "^2.30.3",
-    "@types/json-schema": "^6.0.1",
-    "@types/node": "^9.6.1",
-    "@types/react": "^16.1.0",
-    "@types/react-dom": "^16.0.4",
-    "@types/source-map": "0.5.2",
+    "@types/copy-webpack-plugin": "^4.4.2",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/json-schema": "^7.0.0",
+    "@types/node": "^10.9.1",
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
-    "@types/webpack": "^4.1.3",
-    "@types/webpack-env": "^1.13.5",
+    "@types/webpack": "^4.4.11",
+    "@types/webpack-dev-server": "^2.9.6",
+    "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "^4.1.3",
-    "awesome-typescript-loader": "^5.0.0-1",
+    "awesome-typescript-loader": "^5.2.0",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^4.5.2",
     "favicons-webpack-plugin": "0.0.9",
     "html-webpack-include-assets-plugin": "^1.0.4",
-    "html-webpack-plugin": "^3.1.0",
-    "markdownlint-cli": "^0.8.1",
+    "html-webpack-plugin": "^3.2.0",
+    "markdownlint-cli": "^0.13.0",
     "mdi": "^2.2.43",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "source-map-loader": "^0.2.3",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "source-map-loader": "^0.2.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "tslint-loader": "^3.6.0",
-    "tslint-react": "^3.5.1",
-    "typescript": "^2.8.1",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-merge": "^4.1.2"
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "lint-markdown": "markdownlint --config ./mdlint.json ./README.md",
